--- a/escola-satisfacao/docker-compose.yml
+++ b/escola-satisfacao/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     container_name: mysql_db
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: escola_db
+      MYSQL_DATABASE: projetoteste  
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql  # Script de inicialização do banco
 
   app:
     build: .
