--- a/escola-qualidade-vida/backend/Dockerfile
+++ b/escola-qualidade-vida/backend/Dockerfile
@@ -1,11 +1,20 @@
-# backend/Dockerfile
-FROM python:3.10
+FROM python:3.11-slim
 
+# Diretório principal do container
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copia o conteúdo da pasta 'app' para dentro do container
+COPY ./app /app
 
-COPY . .
+COPY atualiza_senha.py atualiza_senha.py
+# Variável de ambiente para reconhecer o módulo 'app'
+ENV PYTHONPATH=/app
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Instala as dependências
+RUN pip install --no-cache-dir -r /app/requirements.txt
+
+# Expõe a porta 5000 (caso a aplicação utilize essa porta)
+EXPOSE 5000
+
+# Comando para rodar a aplicação
+CMD ["python", "app/main.py"]
