--- a/escola-qualidade-vida/docker-compose.yml
+++ b/escola-qualidade-vida/docker-compose.yml
@@ -1,31 +1,55 @@
 version: '3.8'
 
 services:
-  web:
-    build: ./backend
-    ports:
-      - "8000:8000"
-    environment:
-      - DATABASE_URL=mysql+mysqlconnector://app_user:SenhaSegura123!@db:3306/projetoteste
-    depends_on:
-      - db
-
-  db:
+  mysql:
     image: mysql:8.0
+    container_name: mysql-1
+    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: projetoteste
-      MYSQL_USER: app_user
-      MYSQL_PASSWORD: SenhaSegura123!
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: escola_db
     ports:
       - "3307:3306"
     volumes:
-      - db_data:/var/lib/mysql
+      - ./db_data:/var/lib/mysql
+    networks:
+      - rede-interna
 
-  frontend:
-    build: ./frontend
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: escola-backend
+    restart: always
+    environment:
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_NAME: escola_db
+      DB_USER: root
+      DB_PASSWORD: password
+      SECRET_KEY: uma_chave_super_secreta_32_caracteres_no_minimo
     ports:
-      - "8080:80"
+      - "5000:5000"
+    volumes:
+      - ./backend:/app
+    depends_on:
+      - mysql
+    networks:
+      - rede-interna
 
-volumes:
-  db_data:
+  nginx:
+    image: nginx:alpine
+    container_name: escola-nginx
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./frontend/public:/usr/share/nginx/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - backend
+    networks:
+      - rede-interna
+
+networks:
+  rede-interna:
