--- a/escola-qualidade-vida/frontend/Dockerfile
+++ b/escola-qualidade-vida/frontend/Dockerfile
@@ -1,17 +1,13 @@
-# Usa a imagem oficial do Nginx baseada no Alpine
-FROM nginx:alpine
+# Usando uma imagem do Nginx para servir os arquivos estáticos
+FROM nginx:latest
 
-# Limpa o HTML padrão do Nginx
-RUN rm -rf /usr/share/nginx/html/*
+WORKDIR /usr/share/nginx/html
 
-# Cria a pasta 'pages' caso seja necessário
-RUN mkdir -p /usr/share/nginx/html/pages
+# Remove os arquivos padrão do Nginx
+RUN rm -rf ./*
 
-# Copia tudo de 'public' (do seu diretório local) para dentro da pasta do Nginx
-COPY public/ /usr/share/nginx/html/
+# Copia os arquivos do frontend para o container
+COPY public /usr/share/nginx/html
 
-# Copia o arquivo de configuração do Nginx customizado
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Expõe a porta 80
+# Expondo a porta padrão do Nginx
 EXPOSE 80
