--- a/escola-qualidade-vida/frontend/nginx.conf
+++ b/escola-qualidade-vida/frontend/nginx.conf
@@ -1,38 +1,14 @@
 server {
     listen 80;
     server_name localhost;
-
-    # Servir arquivos estáticos (HTML, CSS, JS, etc.)
+    root /usr/share/nginx/html;
+    
     location / {
-        root /usr/share/nginx/html;
         index index.html;
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.html;
     }
-
-    # Cache de arquivos estáticos
-    location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|otf|mp4|webm|webp|json|html)$ {
-        root /usr/share/nginx/html;
-        expires 7d;
-        access_log off;
-        add_header Cache-Control "public, max-age=604800, immutable";
-    }
-
-    # Proxy reverso para a API Flask
-    location /api/ {
-        proxy_pass http://escola-backend:5000/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    # Proteção contra acesso a arquivos ocultos
-    location ~ /\.(?!well-known).* {
-        deny all;
-    }
+    
+    # Habilita gzip
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 }
