--- a/escola-qualidade-vida/docker-compose.yml
+++ b/escola-qualidade-vida/docker-compose.yml
@@ -31,25 +31,12 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./backend:/app
+      - ./frontend/public:/app/static  # Montando os arquivos estáticos do frontend no backend
     depends_on:
       - mysql
     networks:
       - rede-interna
 
-  nginx:
-    image: nginx:alpine
-    container_name: escola-nginx
-    restart: always
-    ports:
-      - "80:80"
-    volumes:
-      - ./frontend/public:/usr/share/nginx/html
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - backend
-    networks:
-      - rede-interna
-
 networks:
   rede-interna:
+    driver: bridge
