--- a/escola-qualidade-vida/docker-compose.yml
+++ b/escola-qualidade-vida/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "3307:3306"
     volumes:
-      - ./db_data:/var/lib/mysql
+      - ./db_data:/var/lib/mysql  # Persistindo os dados em db_data no host
     networks:
       - rede-interna
 
