--- a/escola-qualidade-vida/frontend/Dockerfile
+++ b/escola-qualidade-vida/frontend/Dockerfile
@@ -1,14 +1,13 @@
 FROM nginx:latest
 
+# Definir o diretório de trabalho no contêiner
 WORKDIR /usr/share/nginx/html
 
 # Remove os arquivos padrão do Nginx
 RUN rm -rf ./*
 
-# Copia os arquivos do frontend para o container
+# Copiar os arquivos do frontend (public) para o contêiner
 COPY public /usr/share/nginx/html
 
 # Expondo a porta padrão do Nginx
 EXPOSE 80
-ENV PYTHONPATH="/app:${PYTHONPATH}"
-
