atualizaçao pagina para receber dados

--- a/escola-qualidade-vida/nginx/nginx.conf
+++ b/escola-qualidade-vida/nginx/nginx.conf
@@ -4,10 +4,10 @@ server {
 
     # Diretório onde os arquivos estáticos são servidos
     location /public/ {
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html;  # Verifique se o diretório dentro do contêiner está correto
     }
 
-    # Redirecionar todas as outras requisições para o backend
+    # Redirecionar todas as outras requisições para o backend Flask
     location /cadastro/ {
         proxy_pass http://escola-backend:5000;  # Nome do contêiner do backend Flask
         proxy_set_header Host $host;
