--- a/escola-qualidade-vida/nginx/nginx.conf
+++ b/escola-qualidade-vida/nginx/nginx.conf
@@ -1,24 +1,18 @@
 server {
     listen 80;
     server_name localhost;
+    client_max_body_size 20M;  # <-- adiciona essa linha para aumentar o limite
 
-    # Diretório onde os arquivos estáticos são servidos
-    location /public/ {
-        root /usr/share/nginx/html;  # Verifique se o diretório dentro do contêiner está correto
-    }
 
-    # Redirecionar todas as outras requisições para o backend Flask
-    location /cadastro/ {
-        proxy_pass http://escola-backend:5000;  # Nome do contêiner do backend Flask
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Certifique-se de redirecionar o / para o backend também, se necessário
+    # Servir arquivos estáticos (caso necessário)
     location / {
-        proxy_pass http://escola-backend:5000;
+        root /usr/share/nginx/html;
+        index index.html;
+    }
+
+    # Redirecionando a requisição POST para o Flask
+    location /cadastro/ {
+        proxy_pass http://escola-backend:5000/;  # O backend Flask está na porta 5000
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
