--- a/escola-qualidade-vida/backend/Dockerfile
+++ b/escola-qualidade-vida/backend/Dockerfile
@@ -1,29 +1,25 @@
 FROM python:3.11-slim
 
-# Instalar dependências do sistema necessárias para psycopg2
+# Dependências do sistema
 RUN apt-get update && apt-get install -y \
     gcc \
     libpq-dev \
-    && rm -rf /var/lib/apt/lists/* 
-     # Limpar cache de APT para reduzir o tamanho da imagem
+    && rm -rf /var/lib/apt/lists/*
 
-# Definir o diretório de trabalho no contêiner
+# Define o diretório correto do projeto
 WORKDIR /app
 
-# Copiar o requirements.txt para o contêiner
-COPY requirements.txt /app/
-
-# Instalar as dependências do Python
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copiar o restante dos arquivos para o contêiner
+# Copia tudo que está em backend/
 COPY . /app
 
-# Adicionar o diretório /app ao PYTHONPATH para garantir que o Python encontre o módulo 'app'
+# Adiciona o caminho ao PYTHONPATH
 ENV PYTHONPATH=/app:$PYTHONPATH
 
-# Expor a porta em que o Flask estará rodando
+# Instala as dependências
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Expõe a porta do Flask
 EXPOSE 5000
 
-# Iniciar o Flask
-CMD ["python", "/app/main.py"]
+# Inicia a aplicação
+CMD ["python", "main.py"]
