--- a/escola-qualidade-vida/nginx/nginx.conf
+++ b/escola-qualidade-vida/nginx/nginx.conf
@@ -1,21 +1,18 @@
 server {
-    listen 80;
+    listen 8080;
     server_name localhost;
-    client_max_body_size 20M;  # <-- adiciona essa linha para aumentar o limite
 
-
-    # Servir arquivos estáticos (caso necessário)
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-    }
-
-    # Redirecionando a requisição POST para o Flask
     location /cadastro/ {
-        proxy_pass http://escola-backend:5000/;  # O backend Flask está na porta 5000
+        proxy_pass http://escola-backend:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ =404;
     }
 }
