atualizando a tela de cadastro de ocorrencias

--- a/escola-qualidade-vida/nginx/nginx.conf
+++ b/escola-qualidade-vida/nginx/nginx.conf
@@ -2,7 +2,15 @@ server {
     listen 80;
     server_name localhost;
 
-    location /cadastro/ {
+    # Rota para arquivos de upload (ex: fotos) - deve vir primeiro
+    location ^~ /uploads/ {
+        alias /app/uploads/;
+        add_header Access-Control-Allow-Origin *;
+        autoindex on;
+    }
+
+    # Rota para backend Flask (todas as APIs)
+    location / {
         proxy_pass http://escola-backend:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -10,9 +18,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location / {
+    # Rota para arquivos estáticos (frontend)
+    location /static/ {
+        root /usr/share/nginx/html;
+    }
+
+    # Fallback para frontend SPA (React/Vue/etc)
+    location /frontend/ {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri $uri/ =404;
+        try_files $uri /index.html;
     }
 }
