atualizaçao tela de busca

--- a/escola-qualidade-vida/nginx/nginx.conf
+++ b/escola-qualidade-vida/nginx/nginx.conf
@@ -2,15 +2,15 @@ server {
     listen 80;
     server_name localhost;
 
-    # Rota para arquivos de upload (ex: fotos) - deve vir primeiro
+    # Rota para arquivos de upload (ex: fotos)
     location ^~ /uploads/ {
-        alias /app/uploads/;
+        alias /app/app/uploads/;  # Caminho real no container para os uploads
         add_header Access-Control-Allow-Origin *;
         autoindex on;
     }
 
-    # Rota para backend Flask (todas as APIs)
-    location / {
+    # Rota para a API Flask (backend)
+    location /api/ {
         proxy_pass http://escola-backend:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -18,13 +18,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Rota para arquivos estáticos (frontend)
+    # Rota para arquivos estáticos do frontend
     location /static/ {
         root /usr/share/nginx/html;
+        try_files $uri $uri/ =404;
     }
 
-    # Fallback para frontend SPA (React/Vue/etc)
-    location /frontend/ {
+    # Fallback para SPA (index.html no frontend)
+    location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri /index.html;
