--- a/escola-qualidade-vida/chatqualidade/domain.yml
+++ b/escola-qualidade-vida/chatqualidade/domain.yml
@@ -19,7 +19,7 @@ responses:
     - text: "Até logo! Se precisar de ajuda com matrículas ou ocorrências, estou à disposição."
 
   utter_inicio_cadastro:
-    - text: "Primeiro Clicar na opção Cadastro de Aluno Segundo  Preencher os campos com as informações solicitadas. Terceiro Clicar no botão Cadastrar."
+    - text: "Primeiro Clicar na opção Cadastro de Aluno. Segundo  Preencher os campos com as informações solicitadas. Terceiro Clicar no botão Cadastrar."
   
   utter_inicio_acompanhamento:
     - text: "Primeiro Clicar na opção Acompanhamento"
@@ -34,7 +34,8 @@ responses:
     - text: "Primeiro Adicionar as informações da empresa"
 
   utter_ocorrencia_tipo:
-    - text: "Descreva o tipo de ocorrencia se é mal comportamneto ou atraso"
+    - text: "Descreva o tipo de ocorrencia se é mal comportamneto ou atraso ou outro evento."
+    
   utter_ocorrencia_descricao:
     - text: "Descreva a ocorrencia no campo sobre atraso ou mal cormportamento do aluno em questão"
 
