--- a/escola-qualidade-vida/docker-compose.yml
+++ b/escola-qualidade-vida/docker-compose.yml
@@ -3,7 +3,6 @@ version: '3.8'
 services:
   mysql:
     image: mysql:8.0
-    
     container_name: mysql
     restart: always
     environment:
@@ -39,7 +38,7 @@ services:
     depends_on:
       - mysql
     volumes:
-       - ./app/uploads:/app/uploads # Monta uploads no backend container também!
+      - ./app/uploads:/app/uploads  # Monta a pasta de uploads no container do backend
     networks:
       - rede-interna
     logging:
@@ -48,7 +47,7 @@ services:
         max-size: "10m"
         max-file: "3"
 
-  nginx: 
+  nginx:
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -60,7 +59,7 @@ services:
       - backend
     volumes:
       - ./frontend/public:/usr/share/nginx/html
-      - ./app/uploads:/app/uploads  # Monta uploads no nginx container
+      - ./app/uploads:/usr/share/nginx/html/uploads  # Monta uploads no diretório correto do Nginx
     networks:
       - rede-interna
     logging:
