--- a/escola-qualidade-vida/nginx/nginx.conf
+++ b/escola-qualidade-vida/nginx/nginx.conf
@@ -4,10 +4,11 @@ server {
 
     # Rota para arquivos de upload (ex: fotos)
     location ^~ /uploads/ {
-        alias /app/app/uploads/;  # Caminho real no container para os uploads
+        alias /usr/share/nginx/html/uploads/;  # Caminho correto dentro do Nginx
         add_header Access-Control-Allow-Origin *;
-        autoindex on;
+        autoindex on;  # Permite o listamento dos arquivos no diretório de uploads
     }
+
 
     # Rota para a API Flask (backend)
     location /api/ {
@@ -28,6 +29,6 @@ server {
     location / {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri /index.html;
+        try_files $uri /index.html;  # Permite o funcionamento correto do frontend de uma SPA
     }
 }
