--- a/escola-qualidade-vida/nginx/nginx.conf
+++ b/escola-qualidade-vida/nginx/nginx.conf
@@ -1,35 +1,48 @@
 server {
     listen 80;
     server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html;
 
-    # Rota para arquivos de upload (ex: fotos)
-    location ^~ /uploads/ {
-        alias /usr/share/nginx/html/uploads/;  # Caminho correto dentro do Nginx
-        add_header Access-Control-Allow-Origin *;
-        autoindex on;  # Permite o listamento dos arquivos no diretório de uploads
+    # Servir arquivos estáticos
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
-
-    # Rota para a API Flask (backend)
+    # Proxy para API - REGRA MAIS ESPECÍFICA
     location /api/ {
-        proxy_pass http://escola-backend:5000/;
+        proxy_pass http://backend:5000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-}
-
-
-    # Rota para arquivos estáticos do frontend
-    location /static/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ =404;
+        
+        # CORS
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization" always;
     }
 
-    # Fallback para SPA (index.html no frontend)
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri /index.html;  # Permite o funcionamento correto do frontend de uma SPA
+    # Proxy para outras rotas do backend
+    location /auth/ {
+        proxy_pass http://backend:5000/auth/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /alunos/ {
+        proxy_pass http://backend:5000/alunos/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Configuração para uploads
+    location /uploads/ {
+        alias /usr/share/nginx/html/uploads/;
+        expires 30d;
     }
 }
