redefinicao de senha funcionando

--- a/escola-qualidade-vida/.env
+++ b/escola-qualidade-vida/.env
@@ -3,3 +3,8 @@ DB_NAME=escola_db
 DB_USER=escola_admin
 DB_PASSWORD=adminpassword456
 SECRET_KEY=uma_chave_super_secreta_32_caracteres_no_minimo
+
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+EMAIL_FROM=seu.email@gmail.com
+EMAIL_PASSWORD=sua_senha_app
