--- a/escola-qualidade-vida/.env
+++ b/escola-qualidade-vida/.env
@@ -4,7 +4,7 @@ DB_USER=escola_admin
 DB_PASSWORD=adminpassword456
 SECRET_KEY=uma_chave_super_secreta_32_caracteres_no_minimo
 
-SMTP_SERVER=smtp.gmail.com
-SMTP_PORT=587
-EMAIL_FROM=seu.email@gmail.com
-EMAIL_PASSWORD=sua_senha_app
+SMTP_SERVER: smtp.gmail.com
+SMTP_PORT: 587
+EMAIL_FROM: elihofnimariano996@gmail.com
+EMAIL_PASSWORD: xjggixwamavlwrmd
