cybersegurança e refazer chatbot

--- a/escola-qualidade-vida/nginx/nginx.conf
+++ b/escola-qualidade-vida/nginx/nginx.conf
@@ -2,6 +2,21 @@ server {
     listen 80;
     server_name localhost;
 
+    # Anti-XSS + restrição de fontes de script (CSP)
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self'; object-src 'none'; frame-ancestors 'none'; base-uri 'self';" always;
+
+    # Bloqueia tentativa de Clickjacking (iframes não permitidos)
+    add_header X-Frame-Options "DENY" always;
+
+    # Previne adivinhação de MIME type (X-Content-Type sniffing)
+    add_header X-Content-Type-Options "nosniff" always;
+
+    # Força navegadores a usarem HTTPS se você habilitar SSL futuramente
+    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+
+    # Proteção contra XSS básica dos navegadores
+    add_header X-XSS-Protection "1; mode=block" always;
+    
     # Rota para arquivos de upload (ex: fotos)
     location ^~ /uploads/ {
         alias /usr/share/nginx/html/uploads/;  # Caminho correto dentro do Nginx
