--- a/escola-qualidade-vida/docker-compose.yml
+++ b/escola-qualidade-vida/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "3307:3306"
     volumes:
-      - ./db_data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql 
     networks:
       - rede-interna
     logging:
@@ -34,26 +34,26 @@ services:
       DB_USER: root
       DB_PASSWORD: password
       SECRET_KEY: uma_chave_super_secreta_32_caracteres_no_minimo
-      
+     
       # Variáveis de Email (SMTP)
       SMTP_SERVER: smtp.gmail.com
       SMTP_PORT: 587
       EMAIL_FROM: elihofnimariano996@gmail.com
-      EMAIL_PASSWORD: x j g g i x w a m a v l w r m d
-      
+      EMAIL_PASSWORD: xjggixwamavlwrmd  # REMOVA OS ESPAÇOS!
+     
       # URL do Frontend para os links de recuperação
       FRONTEND_URL: http://localhost:8080
-      
+     
       # Configurações adicionais (opcionais)
       DEBUG: "False"
       ENVIRONMENT: production
-      
+     
     ports:
       - "5000:5000"
     depends_on:
       - mysql
     volumes:
-      - ./backend/app/uploads:/backend/app/uploads # Monta a pasta de uploads no container do backend
+      - ./backend/app/uploads:/backend/app/uploads
     networks:
       - rede-interna
     logging:
@@ -74,7 +74,7 @@ services:
       - backend
     volumes:
       - ./frontend/public:/usr/share/nginx/html
-      -  ./app/uploads:/usr/share/nginx/html/uploads # Monta uploads no diretório correto do Nginx
+      - ./backend/app/uploads:/usr/share/nginx/html/uploads  # CAMINHO CORRIGIDO
     networks:
       - rede-interna
     logging:
@@ -83,7 +83,9 @@ services:
         max-size: "10m"
         max-file: "3"
 
-
 networks:
   rede-interna:
     driver: bridge
+
+volumes:
+  mysql_data:  # ADICIONE ESTA SEÇÃO SEPARADA PARA VOLUMES
